ns.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
      name: dev
- apiVersion: v1
  kind: Namespace
  metadata:
      name: stage
