router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6
          imagePullPolicy: Always
          volumeMounts:
            - name: router-config
              mountPath: "/etc/nginx/conf.d"
          resources:
            requests:
              memory: ".5Gi"
              cpu: "500m"
            limits:
              memory: ".5Gi"
              cpu: "500m"
          ports:
            - containerPort: 80
      volumes:
        - name: router-config
          configMap:
            name: router-config-mount
