node-js-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
      - name: node-js
        image: gajjalausha/node-app:v1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: persistent-storage
          mountPath: /var/www/html/storage/logs
        - name: persistent-storage
          mountPath: /var/www/html/logs
      volumes:
       - name: persistent-storage
         persistentVolumeClaim:
          claimName: efs-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: node-js-service
spec:
  type: LoadBalancer
  selector:
    app: node-js
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
